--- a/elika-warehouse/views/header.html
+++ b/elika-warehouse/views/header.html
@@ -12,12 +12,16 @@
 			<li><a ui-sref="app.firmware.firmware-management"><span>Firmware</span></a></li>
 			<li class="dropdown" uib-dropdown>
 				<a href class="dropdown-toggle" uib-dropdown-toggle>
-					<span>Warehouse Settings &nbsp;<fa name="angle-down"></fa></span>
+					<span>Administration &nbsp;<fa name="angle-down"></fa></span>
 				</a>
 				<ul class="dropdown-menu panel panel-default animated littleFadeInDown" role="menu">
-					<li><a ui-sref="app.administrator.roles">Roles Administration</a></li>
+					<!-- <li><a ui-sref="app.administrator.roles">Roles Administration</a></li>
+					<li><a ui-sref="app.administrator.add-roles">Add Roles</a></li>
+					<li><a ui-sref="app.administrator.admin">Admin</a></li> -->
+					<li><a ui-sref="app.administrator.roles">Roles</a></li>
 					<li><a ui-sref="app.administrator.add-roles">Add Roles</a></li>
 					<li><a ui-sref="app.administrator.admin">Admin</a></li>
+					<li><a ui-sref="app.administrator.master-admin">Master Admin</a></li>
 				</ul>
 			</li>
 			<li class="dropdown" uib-dropdown>
