--- a/elika-warehouse/views/tmpl/administrator/edit-roles.html
+++ b/elika-warehouse/views/tmpl/administrator/edit-roles.html
@@ -42,10 +42,10 @@
 			</div>			
 			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
-					<a ui-sref="app.monitor-diagnostics-and-reported-issues">
+					<a ui-sref="app.diagnostic">
 						<div class="noback bg-lightred">
 							<div class="itxt">
-								<span class="text-lg">Monitor Diagnostics &amp; Reported Issues</span>
+								<span class="text-lg">Diagnostics</span>
 							</div>
 						</div>
 					</a>
@@ -76,27 +76,12 @@
 												<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
 											</div>
 										</div>
-										<div class="form-group col-sm-12 col-md-4">
-											<label for="">Access administrator</label><br/>
-											<div class="row">
-												<div class="col-sm-12 col-md-6">
-													<label class="checkbox checkbox-custom-alt mb-0" ng-click="visibiltyUserGroup=true">
-														<input name="customRadioAlt" type="radio"><i></i> Full Access
-													</label>
-												</div>
-												<div class="col-sm-12 col-md-6">
-													<label class="checkbox checkbox-custom-alt mb-0" ng-click="visibiltyUserGroup=false">
-														<input name="customRadioAlt" type="radio" checked="checked"><i></i> Restricted Access
-													</label>
-												</div>
-											</div>
-										</div>
 									</div>
 								</div>
-								<div class="overflow mt-20 mb-40" ng-init="visibiltyUserGroup=false" ng-hide="visibiltyUserGroup">
+								<div class="overflow mt-20 mb-40">
 									<div class="hometabs">
 										<div class="row">
-											<div class="col-sm-12 col-md-3">
+											<div class="col-sm-12 col-md-4">
 												<h4>Inventory</h4>
 												<div class="tile-body p-0 table-responsive mt-20">
 													<table class="table table-bordered">
@@ -117,27 +102,7 @@
 													</table>
 												</div>
 											</div>
-											<div class="col-sm-12 col-md-3">
-												<h4>Diagnostic</h4>
-												<div class="tile-body p-0 table-responsive mt-20">
-													<table class="table table-bordered">
-														<thead>
-															<tr>
-																
-																<th width="150" class="ta-c">View</th>
-																<th width="150" class="ta-c">Edit/Update</th>
-															</tr>
-														</thead>
-														<tbody style="font-size:14px;">
-															<tr>
-																<td class="ta-c"><label class="checkbox checkbox-custom-alt checkbox-custom-sm m-0"> <input type="checkbox" checked><i></i></label></td>
-																<td class="ta-c"><label class="checkbox checkbox-custom-alt checkbox-custom-sm m-0"> <input type="checkbox"><i></i></label></td>
-															</tr>
-														</tbody>
-													</table>
-												</div>
-											</div>
-											<div class="col-sm-12 col-md-3">
+											<div class="col-sm-12 col-md-4">
 												<h4>Firmware</h4>
 												<div class="tile-body p-0 table-responsive mt-20">
 													<table class="table table-bordered">
@@ -156,8 +121,8 @@
 													</table>
 												</div>
 											</div>
-											<div class="col-sm-12 col-md-3">
-												<h4>Monitoring &amp; Reports</h4>
+											<div class="col-sm-12 col-md-4">
+												<h4>Diagnostic</h4>
 												<div class="tile-body p-0 table-responsive mt-20">
 													<table class="table table-bordered">
 														<thead>
@@ -165,13 +130,11 @@
 																
 																<th width="150" class="ta-c">View</th>
 																<th width="150" class="ta-c">Edit/Update</th>
-																<th width="150" class="ta-c">Delete</th>
 															</tr>
 														</thead>
 														<tbody style="font-size:14px;">
 															<tr>
 																<td class="ta-c"><label class="checkbox checkbox-custom-alt checkbox-custom-sm m-0"> <input type="checkbox" checked><i></i></label></td>
-																<td class="ta-c"><label class="checkbox checkbox-custom-alt checkbox-custom-sm m-0"> <input type="checkbox"><i></i></label></td>
 																<td class="ta-c"><label class="checkbox checkbox-custom-alt checkbox-custom-sm m-0"> <input type="checkbox"><i></i></label></td>
 															</tr>
 														</tbody>
