--- a/elika-warehouse/views/tmpl/administrator/master-admin.html
+++ b/elika-warehouse/views/tmpl/administrator/master-admin.html
@@ -53,7 +53,7 @@
 			</div>			
 		</div>
 		
-		<div class="row" ng-controller="AdminCtrl">
+		<div class="row" ng-controller="MasterAdminCtrl">
 			<div class="col-md-12">
 				<section class="tile box-shadow" fullscreen="isFullscreen06">
 					<div class="tile-header dvd dvd-btm">
@@ -62,104 +62,77 @@
 							<li class="addpopup">
 								<div ng-controller="ModalDemoCtrl">
 									<script type="text/ng-template" id="myModalContent.html">
-										<div class="modal-header"><h4 class="modal-title custom-font">Add Admin</h4></div>
+										<form name="add_master_admin" role="form" ng-validate ng-submit="submitAddMasterAdmin(master,add_master_admin)">
+										<div class="modal-header"><h4 class="modal-title custom-font">Add Master Admin</h4></div>
 										<div class="modal-body">											
 											<div class="row form-group">
 												<div class="col-sm-6 col-md-6">
 													<label for="">First Name</label>
-													<input type="text" name="" id="" class="form-control" placeholder="">
+													<input type="text" name="" id="" ng-model="master.first_name" class="form-control" placeholder="" required>
 												</div>
 												<div class="col-sm-6 col-md-6">
 													<label for="">Last Name</label>
-													<input type="text" name="" id="" class="form-control" placeholder="">
+													<input type="text" name="" id="" ng-model="master.last_name" class="form-control" placeholder="" required>
 												</div>
 											</div>
 											
 											<div class="form-group row">
 												<div class="col-sm-6 col-md-6">				
 													<label for="">Email Address</label>
-													<input type="emial" name="" id="" class="form-control" placeholder="">
+												<input type="email" name="" id="" ng-model="master.email" class="form-control" placeholder="" required>
 												</div>
 												<div class="col-sm-6 col-md-6">				
 													<label for="">Phone</label>
-													<input type="text" name="" id="" class="form-control" placeholder="">
+												<input type="text" name="" id="" class="form-control ng-pristine ng-invalid ng-invalid-required ng-valid-pattern ng-touched" ng-model="master.phone" pattern="^\+[1-9]{1}[0-9]{3,14}$" oninvalid="setCustomValidity('Please enter valid mobile number')" onchange="try{setCustomValidity('')}catch(e){}" placeholder="+1 2015550123" required="" aria-required="true" aria-invalid="true">
+												</div>
+											</div>
+											<div class="form-group row">
+												<div class="col-sm-6 col-md-6">				
+													<label for="">Zip Code</label>
+												<input type="number" name="" id="" ng-model="master.zipcode" class="form-control" maxlength="6" placeholder="" required>
+												</div>
+												<div class="col-sm-6 col-md-6">				
+													<label for="">Expiration Date</label>
+													<div class="input-group userexp" ng-controller="DatepickerDemoCtrl" >
+														<input type="text"  onkeypress="return false;"id="expirationdate" name="expirationdate" ng-disabled="userData.status == 0" class="form-control" uib-datepicker-popup="dd/MM/yyyy" is-open="opened" min-date="mindate" datepicker-options="dateOptions" ng-required="true" close-text="Close" ng-model="master.expiration_date"/>
+														<span class="input-group-btn">
+															<button  ng-disabled="userData.status == 0" type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
+														</span>
+													</div>
 												</div>
 											</div>
 											
-											<div class="form-group row">												
+											<div class="form-group row">
 												<div class="col-sm-6 col-md-6">
 													<label for="">Password</label>
-													<input type="password" name="" id="" class="form-control" placeholder="">
+													<input type="password" name="" id="" ng-model="master.password" class="form-control" maxlength="16" placeholder="" required>
 												</div>
 												<div class="col-sm-6 col-md-6">
 													<label for="">Confirm Password</label>
-													<input type="password" name="" id="" class="form-control" placeholder="">
+													<input type="password" name="" id="" ng-model="master.confirm_password" class="form-control" maxlength="16" placeholder="" required>
 												</div>
-											</div>
-											
-											<div class="form-group row">												
+											</div>		
+											<div class="form-group row">
 												<div class="col-sm-6 col-md-6">
 													<label for="">Admin Password</label>
-													<input type="password" name="" id="" class="form-control" placeholder="">
+													<input type="password" name="" id="" ng-model="master.admin_password" class="form-control" maxlength="16" placeholder="" required>
 												</div>
-												<div class="col-sm-6 col-md-6">
-													<label for="">Zip Code</label>
-													<input type="password" name="" id="" class="form-control" placeholder="">
-												</div>
-											</div>
-											
-											<div class="form-group row">												
-												<div class="col-sm-6 col-md-6">
-													<label for="" style="display: block;">Select Admin</label>
-													<select chosen="{width: '100%'}">
-														<option>Master Administrator</option>
-														<option>Senior Administrator</option>
-														<option>Super Administrator</option>
-														<option>Sub Administrator</option>
-														<option>Assistance Administrator</option>
-													</select>
-												</div>
-												<div class="col-sm-6 col-md-6">
-													<label for="" style="display: block;">Roles <small class="pull-right" style="margin-top: 5px;"><a ng-click="cancel()" ui-sref="app.admin.administrator.add-roles" href="#/app/admin/support/technician">Add Roles</a></small></label>
-													<select chosen="{width: '100%'}">
-														<option>Role 1</option>
-														<option>Role 2</option>
-														<option>Role 3</option>
-														<option>Role 4</option>
-														<option>Role 5</option>
-													</select>
-												</div>
-											</div>
-											
-											<div class="form-group row" ng-controller="ActivebtnCtrl">
 												<div class="col-sm-6 col-md-6">
 													<label for="">Status</label><br/>
-													<div class="btn-group btnrounded">
-														<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
-														<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
+													<div class="btn-group btnrounded" ng-init="master.status = 1">
+														<label class="btn btn-default" ng-model="master.status" uib-btn-radio="1">Active</label>
+														<label class="btn btn-default" ng-model="master.status" uib-btn-radio="0">Inactive</label>
 													</div>
-												</div>
-												<div class="col-sm-6 col-md-6" ng-hide="radioModel=='Inactive'">
-													<div ng-controller="DatepickerDemoCtrl">
-														<label for="">Expiration Date</label>
-														<div class="input-group userexp">
-															<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="dt" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
-															<span class="input-group-btn">
-																<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
-															</span>
-														</div>
-													</div>
-												</div>
-											</div>
-																												
+												</div>		
+											</div>															
 										</div>
 										<div class="modal-footer">
-											<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
+											<div class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" id="close" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</div>
 											<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
 										</div>
-										
+											</form>		
 									</script>
-									<a ng-click="open()" class="btn btn-default btn-border btn-rounded btn-ef btn-ef-5 btn-ef-5b add"><i class="fa fa-plus"></i> <span>Add Admin</span></a>
+									<a ng-click="open()" class="btn btn-default btn-border btn-rounded btn-ef btn-ef-5 btn-ef-5b add"><i class="fa fa-plus"></i> <span>Add Master Admin</span></a>
 								</div>
 							</li>
 						</ul>
@@ -233,8 +206,8 @@
 												<p class="ta-c">{{ user.phone }}</p>
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
-												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.administrator.admin-profile">View</a>
-												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.administrator.admin-profile">Edit</a>
+												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.administrator.master-admin-profile">View</a>
+												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.administrator.master-admin-profile">Edit</a>
 												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm($event)">Delete</a>
 											</div>
 										</md-card>										
