--- a/elika-warehouse/views/tmpl/administrator/view-roles.html
+++ b/elika-warehouse/views/tmpl/administrator/view-roles.html
@@ -42,10 +42,10 @@
 			</div>			
 			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
-					<a ui-sref="app.monitor-diagnostics-and-reported-issues">
+					<a ui-sref="app.diagnostic">
 						<div class="noback bg-lightred">
 							<div class="itxt">
-								<span class="text-lg">Monitor Diagnostics &amp; Reported Issues</span>
+								<span class="text-lg">Diagnostics</span>
 							</div>
 						</div>
 					</a>
@@ -84,9 +84,8 @@
 							<div class="form-group col-sm-12 profiledetail">
 								<p><label>Roles Name</label> Administrator 1</p>
 								<p><label>Inventory Access</label> View, Edit</p>
-								<p><label>Diagnostics Access</label> View</p>
 								<p><label>Firmware Access</label> View</p>
-								<p><label>Reports Access</label> View</p>
+								<p><label>Diagnostics Access</label> View</p>								
 							</div>											
 						</div>
 					</div>
