--- a/elika-warehouse/views/tmpl/firmware/firmware-management.html
+++ b/elika-warehouse/views/tmpl/firmware/firmware-management.html
@@ -53,7 +53,7 @@
 			</div>			
 		</div>
 		
-		<div class="row" ng-controller="FirmwareManagementCtrl">
+		<div class="row">
 			<div class="col-md-12">
 				<section class="tile box-shadow">
 					<div class="tile-header dvd dvd-btm">
@@ -62,13 +62,13 @@
 							<li class="addpopup">
 								<div ng-controller="ModalDemoCtrl">
 									<script type="text/ng-template" id="myModalContent.html">
-										<form name="form1" role="form">
+										<form name="form1" role="form" ng-submit="submitAddFirmware(addFirmware,file)">
 											<div class="modal-header"><h4 class="modal-title custom-font">Add Configuration Device</h4></div>
 											<div class="modal-body mt-5">
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Device Model</label><br/>
-														<select class="form-control">
+														<select class="form-control" ng-model="addFirmware.device_model">
 															<option>Elika 76</option>
 															<option>Elika 76-S</option>
 															<option>Elika 92</option>
@@ -80,7 +80,7 @@
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Component</label><br/>
-														<select class="form-control">
+														<select class="form-control" ng-model="addFirmware.component">
 															<option>Main Board</option>
 															<option>Front Board</option>
 															<option>VoIP</option>
@@ -91,7 +91,7 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Hardware Version</label><br/>
-														<select class="form-control">
+														<select class="form-control" ng-model="addFirmware.hardware_version">
 															<option>A0</option>
 															<option>B0</option>
 															<option>A1</option>
@@ -100,7 +100,7 @@
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Firmware Version</label><br/>
-														<select class="form-control">
+														<select class="form-control" ng-model="addFirmware.firmware_version">
 															<option>V1.0</option>
 															<option>V1.1</option>
 															<option>V1.2</option>
@@ -119,7 +119,7 @@
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Upload Firmware</label>
 														<div class="profilephoto">
-															<input type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
+															<input type="file" file-model="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
 															<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div>
 														</div>
 													</div>
@@ -127,12 +127,12 @@
 												<div class="row">
 													<div class="form-group col-sm-12 col-md-12">
 														<label for="">Description of the Firmware Upgrade</label><br/>
-														<textarea name="" id="" class="form-control" placeholder=""></textarea>
+														<textarea name="" id="" ng-model="addFirmware.description" class="form-control" placeholder=""></textarea>
 													</div>
 												</div>
 											</div>
 											<div class="modal-footer">
-												<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
+												<div class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</div>
 												<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
 											</div>
 										</form>		
