--- a/elika-warehouse/views/tmpl/administrator/master-admin-profile.html
+++ b/elika-warehouse/views/tmpl/administrator/master-admin-profile.html
@@ -73,7 +73,7 @@
 			</div>
 			
 			<div class="col-sm-12 col-md-8"> 
-				<section class="tile tile-simple">
+				<section class="tile tile-simple"> 
 					<div class="tile-body p-0"> 
 						<uib-tabset class="tabs-dark"> 
 							<uib-tab heading="Profile Detail">
@@ -83,14 +83,8 @@
 											<div class="form-group col-sm-12 profiledetail">
 												<p><label>Name</label> Arnold</p>
 												<p><label>Email</label> arnold1234@gmail.com</p>
-												<p><label>Phone</label> +1 212 1467 1212</p>
-												<p><label>Zip Code</label> 90001</p>
-												<p><label>Username</label> admin</p>
+												<p><label>Phone</label> +1 212 1467 1212</p>												
 												<p><label>Password</label> *********</p>
-												<p><label>Admin</label> Assistance Administrator</p>
-												<p><label>ROle</label> Role 1</p>
-												<p><label>Status</label> Active</p>
-												<p><label>Expiration Date</label> 21/05/2019</p>
 											</div>											
 										</div>
 										
@@ -122,7 +116,7 @@
 											</div>
 										</div>
 										
-										<div class="form-group row">											
+										<div class="form-group row">
 											<div class="col-sm-6 col-md-6">
 												<label for="">Password</label>
 												<input type="password" name="" id="" class="form-control" value="*********">
@@ -133,71 +127,9 @@
 											</div>
 										</div>
 										
-										<div class="form-group row">											
-											<div class="col-sm-6 col-md-6">
-												<label for="">Admin Password</label>
-												<input type="password" name="" id="" class="form-control" value="*********">
-											</div>
-											<div class="col-sm-6 col-md-6">
-												<label for="">Zip Code</label>
-												<input type="text" name="" id="" class="form-control" value="90001">
-											</div>
-										</div>
-										
-										<div class="form-group row">
-											<div class="col-sm-6 col-md-6">
-												<label for="" style="display: block;">Select Admin</label>
-												<select chosen="{width: '100%'}">
-													<option>Master Administrator</option>
-													<option>Senior Administrator</option>
-													<option>Super Administrator</option>
-													<option>Sub Administrator</option>
-													<option>Assistance Administrator</option>
-												</select>
-											</div>
-											<div class="col-sm-6 col-md-6">
-												<label for="" style="display: block;">Roles <small class="pull-right" style="margin-top: 5px;"><a ng-click="cancel()" ui-sref="app.admin.administrator.add-roles" href="#/app/admin/support/technician">Add Roles</a></small></label>
-												<select chosen="{width: '100%'}">
-													<option>Role 1</option>
-													<option>Role 2</option>
-													<option>Role 3</option>
-													<option>Role 4</option>
-													<option>Role 5</option>
-												</select>
-											</div>
-										</div>
-										
-										<div class="form-group row">
-											<div class="col-sm-6 col-md-6" ng-controller="ActivebtnCtrl">
-												<div class="row">
-													<div class="col-sm-5 col-md-5 pr-0">
-														<label for="">Status</label><br/>
-														<div class="btn-group btnrounded">
-															<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
-															<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
-														</div>
-													</div>
-													<div class="col-sm-7 col-md-7" ng-hide="radioModel=='Inactive'">
-														<div ng-controller="DatepickerDemoCtrl">
-															<label for="">Expiration Date</label>
-															<div class="input-group">
-																<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="dt" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
-																<span class="input-group-btn">
-																	<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
-																</span>
-															</div>
-														</div>
-													</div>
-												</div>
-											</div>
-										</div>
-																				
-										<div class="form-group row legend">
-											<div class="col-md-12">
-												<p></p>
-												<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Cancel</button>
-												<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Save</button>
-											</div>
+										<div class="form-group">
+											<a ui-sref="app.administrator.admin" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10">Cancel</a>
+											<button type="submit" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10">Submit</button>
 										</div>
 									</div>
 								</div>
