--- a/elika-warehouse/views/tmpl/firmware/firmware-management.html
+++ b/elika-warehouse/views/tmpl/firmware/firmware-management.html
@@ -68,19 +68,14 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Device Model</label><br/>
-														<select class="form-control" ng-model="addFirmware.device_model">
-															<option>Elika 76</option>
-															<option>Elika 76-S</option>
-															<option>Elika 92</option>
-															<option>Elika 92-S</option>
-															<option>Elika 460</option>
-															<option>Elika 918</option>
-															<option>Elika 2101</option>
+														<select class="form-control" ng-model="addFirmware.device_model" ng-options="model for model in deviceModel" ng-change="deviceHardware(addFirmware.device_model)">
+															<option value="">Select</option>
 														</select>
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Component</label><br/>
 														<select class="form-control" ng-model="addFirmware.component">
+															<option value="">Select</option>
 															<option>Main Board</option>
 															<option>Front Board</option>
 															<option>VoIP</option>
@@ -91,31 +86,17 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Hardware Version</label><br/>
-														<select class="form-control" ng-model="addFirmware.hardware_version">
-															<option>A0</option>
-															<option>B0</option>
-															<option>A1</option>
-															<option>B1</option>
+														<select class="form-control" ng-model="addFirmware.hardware_version" ng-options="version for version in hardwareVersions">
+															<option value="">Select</option>
 														</select>
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Firmware Version</label><br/>
-														<select class="form-control" ng-model="addFirmware.firmware_version">
-															<option>V1.0</option>
-															<option>V1.1</option>
-															<option>V1.2</option>
-														</select>
+														<input class="form-control" type="number" ng-model="addFirmware.firmware_version"/>
 													</div>
 												</div>
 												<div class="row">
-													<div class="form-group col-sm-6 col-md-6">
-														<label for="">File Structure Version</label><br/>
-														<select class="form-control">
-															<option>010000</option>
-															<option>010001</option>
-															<option>010002</option>
-														</select>
-													</div>
+													
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Upload Firmware</label>
 														<div class="profilephoto">
@@ -132,7 +113,7 @@
 												</div>
 											</div>
 											<div class="modal-footer">
-												<div class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</div>
+												<div class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" id="close" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</div>
 												<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
 											</div>
 										</form>		
