--- a/elika-warehouse/views/tmpl/inventory/view-device.html
+++ b/elika-warehouse/views/tmpl/inventory/view-device.html
@@ -91,7 +91,9 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Hardware Version</label><br/>
-														<input type="number" class="form-control" ng-model="upgradeFirmware.hardware_version" required="required">
+														<select class="form-control" ng-model="upgradeFirmware.hardware_version" required="required" ng-options="version for version in hardwareVersions">
+														<option value="">Select</option>
+														</select>
 														<!-- <select class="form-control">
 															<option>A0</option>
 															<option>B0</option>
@@ -128,7 +130,7 @@
 												</div> -->	
 											</div>
 											<div class="modal-footer">
-												<div class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</div>
+												<div class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left" id="close"></i> Close</div>
 												<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Upgrade Now</button>	
 											</div>
 										</form>		
