--- a/elika-warehouse/views/tmpl/firmware/firmware-management.html
+++ b/elika-warehouse/views/tmpl/firmware/firmware-management.html
@@ -92,7 +92,7 @@
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Firmware Version</label><br/>
-														<input class="form-control" type="number" ng-model="addFirmware.firmware_version"/>
+														<input class="form-control" type="text" ng-model="addFirmware.firmware_version"/>
 													</div>
 												</div>
 												<div class="row">
