--- a/elika-warehouse/views/tmpl/inventory/view-device.html
+++ b/elika-warehouse/views/tmpl/inventory/view-device.html
@@ -103,7 +103,7 @@
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Firmware Version</label><br/>
-														<input type="number" class="form-control" ng-model="upgradeFirmware.firmware_version" required="required">
+														<input type="text" class="form-control" ng-model="upgradeFirmware.firmware_version" required="required">
 														<!-- <select class="form-control">
 															<option>V1.0</option>
 															<option>V1.1</option>
